--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 header{
     padding: 10px 20px;
     background-color: orange;
+    margin-bottom: 10px;
 }
 
 main{
@@ -27,7 +28,7 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 
@@ -62,7 +63,7 @@ p{
     margin: 10px 0;
     
 }
-.resume:hover{
+.imagem:hover{
     transform: translateY(-2px);
     transition: .3s ease all;
 }
