--- a/style.css
+++ b/style.css
@@ -7,15 +7,15 @@
 header{
     padding: 10px 20px;
     background-color: orange;
-    margin-bottom: 10px;
     font-size: 2em;
 }
 
 main{
     background-color: orange;
+    padding: 20px 0;
 }
 
-p{  
+p{
     color: white;
     display: flex;
     align-items: center;
