--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ p{
     
 }
 .imagem:hover{
-    transform: translateY(-2px);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    transform: translateY(-1px);
     transition: .3s ease all;
 }
 .F{
