--- a/style.css
+++ b/style.css
@@ -43,11 +43,6 @@ p{
      justify-content: center;
 }
 
-.linkButton:hover{
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    transform: translateY(-1px);
-
-}
 .resume{
     color: white;
     display: flex;
@@ -77,7 +72,7 @@ a{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 600;
     transition: .3s ease all;
-    margin: 10px 0;
+    margin: 10px 20px;
     
 }
 a:hover{
